--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "project",
-  "version": "1.0.0",
-  "description": "ING4 Project ",
-  "main": "app.ts",
+  "name": "final-project-nodejs",
+  "version": "2.1.0",
+  "description": "This is the project in NodeJS in the Web Technologies course at ECE Paris.Lyon",
+  "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/tsc -p tsconfig.json",
+    "test": "./node_modules/.bin/mocha -r ts-node/register src/**/*.test.ts",
     "start": "./node_modules/.bin/ts-node src/server.ts",
-    "dev": "nodemon app.ts",
-    "hello": "echo 'hello'"
+    "build": "./node_modules/.bin/tsc -p tsconfig.json",
+    "dev": "./node_modules/.bin/nodemon ",
+    "populate": "./node_modules/.bin/ts-node bin/populate.ts"
   },
-  "author": "Marie Ploteau, Thomas Virondaud",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^12.12.21",
-    "ejs": "^3.0.1",
+    "body-parser": "^1.19.0",
+    "d3": "^5.14.2",
+    "del": "^5.1.0",
+    "ejs": "^2.7.4",
+    "encoding-down": "^6.3.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "level": "^6.0.0",
@@ -21,7 +25,17 @@
     "level-ws": "^2.0.0",
     "leveldown": "^5.4.1",
     "levelup": "^4.3.2",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "nodemon": "^2.0.1",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.7",
+    "@types/express": "^4.17.2",
+    "@types/levelup": "^3.1.1",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.11",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
   }
 }
