--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "final-project-nodejs",
-  "version": "2.1.0",
-  "description": "This is the project in NodeJS in the Web Technologies course at ECE Paris.Lyon",
+  "name": "projet-node",
+  "version": "2.0.0",
+  "description": "Node JS project s7 ECE",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha -r ts-node/register src/**/*.test.ts",
